syntax = "proto3";
option csharp_namespace = "gRPC";

package grpc;

message WarehouseProductResponse
{

  int64 ProductId = 1;
  int64 WarehouseId = 2;
  int32 Quantity = 3;
  int32 minimumQuantity = 4;
  string WarehousePosition = 5;
}

message CreateWarehouseProductRequest {
  string name = 4;
  string description = 3;
  double price = 5;
  int64 ProductId = 1;
  int64 WarehouseId = 2;
  
}
  
  message GetWarehouseProductRequest
  {
    int64 ProductId = 1;
    int64 WarehouseId = 2;
  }
  message GetWarehouseProductsRequest {}

  message GetWarehouseProductsResponse
  {
    repeated WarehouseProductResponse warehouseProducts = 1;
  }
  



service WarehouseProductGrpcService{
  rpc CreateWarehouseProduct(CreateWarehouseProductRequest) returns (WarehouseProductResponse);
rpc GetWarehouseProduct(GetWarehouseProductRequest) returns (WarehouseProductResponse);
rpc GetProducts(GetWarehouseProductsRequest) returns (GetWarehouseProductsResponse);
  

}